Renamed \gamma -> \otspkkeylen in the OTS section.

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -90,6 +90,7 @@
 
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
 \newcommand{\limbs}{\gamma}
+\newcommand*{\otspkkeylen}{\gamma}
 % Used inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
 \newcommand{\NODE}[1]{\ensuremath{v_{\scriptscriptstyle #1}}}
 \newcommand{\MSG}[1]{\ensuremath{{\scriptstyle m}_{\scriptscriptstyle #1}}}
