Changed all \gamma to either \limbs or \otspkkeylen, depening on semantics. This allows easy renaming. Currently, \limbs  is \kappa

--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -89,7 +89,7 @@
 \newcommand*{\decompmod}[1]{\decomp_{#1}}
 
 \newcommand{\hashajtai}{h_\mathrm{Ajtai}}
-\newcommand{\limbs}{\gamma}
+\newcommand{\limbs}{\kappa}
 \newcommand*{\otspkkeylen}{\gamma}
 % Used inside inkscape svg. This uses lots of LaTeX commands because the svg get messy otherwise.
 \newcommand{\NODE}[1]{\ensuremath{v_{\scriptscriptstyle #1}}}
