--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -1,3 +1,5 @@
+%%% NOTE: I changed notations. Be sure that gamma is the correct thing.
+
 % \begin{table}
 % \centering
 % \begin{tabular}{@{\makebox[3em][r]{\rownumber\space}} l@{\hspace{3em}}rl}
