--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -21,16 +21,16 @@ For convenience, the results of running the script for a range of reasonable inp
    \multicolumn{1}{@{\makebox[3em][r]{\#\space}} c}{Source}&\multicolumn{2}{c}{Constraint}\\
   \midrule
    \autoref{lem:hvcprobhom}&$\bagg \geq$&$ \eta\sqrt{2\alpha_w\rho(\epsilon + 1 + \log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil + 2\tau))\cdot\ln2}$\\
-   \autoref{lem:kots_correct}& $\beta_\sigma \geq$&$ 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\gamma)\cdot\ln2}$\\
+   \autoref{lem:kots_correct}& $\beta_\sigma \geq$&$ 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\otspkkeylen)\cdot\ln2}$\\
    \autoref{lem:kots_sis}&$\abs{\tern_{\alpha_H}} \geq$&$ 2^{2\secpar}$\\
-   \autoref{lem:keyhidden}& $\gamma\geq$&$((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})$ \gnote{Fixed $q\rightarrow q'$ here. Please double-check.}\\
+   \autoref{lem:keyhidden}& $\otspkkeylen\geq$&$((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})$ \gnote{Fixed $q\rightarrow q'$ here. Please double-check.}\\
    \autoref{lem:keyhidden}& $\abs{\tern_{\alpha_H}} \leq$&$ 2^{2\secpar + \delta}$\\
    \autoref{lem:nilssupportivechildsupport}&$q'>$&$ 16 \alpha_w \alpha_H\varphi$\\
    \autoref{lem:msigaggcorrect}&$\chi \geq$ &$\secpar/(\varepsilon-1)$\\
    \autoref{lem:msigunf}&$\abs{\tern_{\alpha_w}} \geq$&$2^\secpar$
   %\bottomrule
   \end{tabular}
-  \gnote{$\xi = 2\gamma$ is missing, from the connection of the HVC and KOTS. I suggest renaming $\gamma$, anyway.}
+  \gnote{$\xi = 2\otspkkeylen$ is missing, from the connection of the HVC and KOTS. I suggest renaming $\otspkkeylen$, anyway.}
   \caption{The constraints a set of Chipmunk parameters needs to satisfy to ensure that the proofs are applicable. The parameters additionally need to be chose such that the associated Ring-SIS problems are hard.}\label{tab:constraints}
   \end{table}
   
@@ -40,7 +40,7 @@ For convenience, the results of running the script for a range of reasonable inp
   \toprule
   contribution & & size in bits\\
   \midrule
-  \multirow{2}{*}{public parameters} & HVC: Ajtai's hash functions & $n(\xi\gamma' + 2\gamma)\ceiled{\log q}$\\\cline{2-3}
+  \multirow{2}{*}{public parameters} & HVC: Ajtai's hash functions & $n(\xi\limbs' + 2\limbs)\ceiled{\log q}$\\\cline{2-3}
                                      & KOTS & $n\cdot \frac12\xi \ceiled{\log q'}$\\
   \hline                                  
   public key                         & HVC commitment & $n\ceiled{\log q}$\\
@@ -59,8 +59,8 @@ For convenience, the results of running the script for a range of reasonable inp
  \bigskip % Remove together with gnote
  \gnote{@Zhenfei: Please verify that this matches your scripts}
  
- \smallskip% Remove together with gnote
- \gnote{$\xi$ may be replaced by new variable for the HOTS length due to ambiguity of $\gamma$.}
+%  \smallskip% Remove together with gnote
+%  \gnote{$\xi$ may be replaced by new variable for the HOTS length due to ambiguity of $\gamma$.}
  
 \caption{Space efficiency of Chipmunk as a function of the tunable parameters. $\limbs \coloneqq \ceiled{\log_{2\eta+1}q}$, $\limbs'\coloneqq \ceiled{\log_{2\eta+1}q'}$ }
 \label{tab:efficiencyfromparameters}
@@ -193,5 +193,5 @@ For the sake of concreteness, let us just consider $\tau=21$ and $\rho=1024$.
 An aggregated signature of size $142$ Kilobytes, consists of the following components.
 The aggregated path and its adjacent nodes belonging to the homomorphic vector commitment, i.e. $2\tau\lceil\log_{2\eta+1}q\rceil$ polynomials in $\ring$ with an infinity norm bound $\bagg <2^{15}$, which constitute around $126$ kilobytes.
 The aggregated decomposed public keys for the one time signature scheme, i.e., $2\lceil\log_{2\eta+1}q'\rceil$ polynomials in $\ring$ with norm bound $\bagg < 2^{15}$ that constitute around $8$ kilobytes.
-The aggregated one time signature, i.e., $\gamma$ polynomials in $\mathcal{R}$ with norm bound $\beta_\sigma < 2^{20}$, that constitutes $8$ kilobytes. \gnote{grammar}
+The aggregated one time signature, i.e., $\otspkkeylen$ polynomials \gnote{Shouldn't this be a singe poly?} in $\mathcal{R}$ with norm bound $\beta_\sigma < 2^{20}$, that constitutes $8$ kilobytes. \gnote{grammar}
 %This almost fits inside a single ethereum block whose peak size is around 130 Kilobytes\footnote{\url{https://etherscan.io/chart/blocksize}}.
